--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -15,6 +15,7 @@
 
 h1 {
   font-size: 2rem;
+  margin: 1rem 0;
 }
 
 h2 {
@@ -48,4 +49,80 @@ nav li {
   list-style: none;
   font-weight: 700;
   color: white;
+}
+
+footer {
+  margin-top: 1rem;
+}
+
+/* ************ Classification Page ************ */
+
+#inv-display {
+  & li {
+    list-style: none;
+  }
+
+  & img {
+    display: block;
+    max-width: 200px;
+    margin: auto;
+  }
+
+  & h2 {
+    text-align: center;
+  }
+
+  & span {
+    display: block;
+    text-align: center;
+  }
+}
+
+/* ************ Details Page ************ */
+
+#carPic {
+  display: block;
+  max-width: 470px;
+  margin: 1rem auto;
+}
+
+#detailHighlights {
+
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
+  background-color: lightgrey;
+  padding: 1rem;
+
+  & div {
+    border: 1px solid white;
+    background-color: black;
+    padding: 1rem;
+    color: white;
+
+    & p {
+      text-align: right;
+      font-weight: 700;
+    }
+  }
+}
+
+#carDesc {
+  padding: 1rem 2rem;
+}
+
+#detailList {
+  margin-left: 1rem;
+
+  & li {
+    list-style: none;
+  }
+}
+
+@media screen and (min-width:512px) {
+
+    #detailPageContent {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
 }
