--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,4 +2,5 @@
 let year = d.getFullYear() %>
 <footer>
     <p class="copyright">&copy; <%= year %>, CSE 340 App</p>
+    <p><a href="/inv/detail/110">Intentional Error Test Link</a></p>
 </footer>
