--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,5 @@
 <h1>Welcome to CSE Motors!</h1>
+<%- messages() %>
 <div class="car">
     <img src="images/vehicles/delorean.jpg" alt="Delorean">
     <div class="own">
