--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -6,12 +6,20 @@
 
 <%- messages() %>
 
-<form id="loginForm">
+<% if (errors) { %>
+    <ul class="notice">
+        <% errors.array().forEach(error => { %>
+            <li><%= error.msg %></li>
+        <% }); %>
+    </ul>
+<% } %>
+
+<form id="loginForm" action="/account/login" method="post">
     <fieldset>
-        <label>Email:<input type="email" id="email" name="account_email" required></label>
+        <label>Email:<input type="email" id="email" name="account_email" required value="<%= locals.account_email %>"></label>
         <label>Password: <span>Passwords must be at least 12 characters and contain at least 1 number, 1 capital letter, and 1 special character.</span>
             <input type="password" id="password" name="account_password" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$" required></label>
         <button type="submit">LOGIN</button>
-        <p>No account? <a href="register">Sign Up</a></p>
+        <p id="noAccount">No account? <a href="register">Sign Up</a></p>
     </fieldset>
 </form>
