--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -16,9 +16,9 @@
 
 <form id="registerForm" action="/account/register" method="post">
     <fieldset>
-        <label>First Name:<input type="text" id="fname" name="account_firstname" required></label>
-        <label>Last Name:<input type="text" id="lname" name="account_lastname" required></label>
-        <label>Email:<input type="email" id="email" name="account_email" required></label>
+        <label>First Name:<input type="text" id="fname" name="account_firstname" required value="<%= locals.account_firstname %>"></label>
+        <label>Last Name:<input type="text" id="lname" name="account_lastname" required value="<%= locals.account_lastname %>"></label>
+        <label>Email:<input type="email" id="email" name="account_email" required value="<%= locals.account_email %>"></label>
         <label>Password: <span>Passwords must be at least 12 characters and contain at least 1 number, 1 capital letter, and 1 special character.</span>
             <input type="password" id="password" name="account_password" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$" required></label>
         <button type="submit">REGISTER</button>
