--- a/views/account/manage.ejs
+++ b/views/account/manage.ejs
@@ -1,7 +1,7 @@
 <% if (title) { %>
-<h1><%= title %></h1>
+    <h1><%= title %></h1>
 <% } else {
-  res.redirect('/')
+    res.redirect('/')
 } %>
 
 <%- messages() %>
@@ -14,4 +14,11 @@
     </ul>
 <% } %>
 
-<p>You're logged in.</p>
+<h2>Welcome, <%= locals.accountData.account_firstname %>.</h2>
+
+<p id="accountUpdateLink"><a href="/account/update/<%= locals.accountData.account_id %>">Update your account information</a></p>
+
+<% if (locals.emplAuth) { %>
+    <h3>Inventory Management</h3>
+    <p id="invManageLink"><a href="/inv/manage">Manage Company Inventory</a></p>
+<% } %>
