--- a/views/account/manage.ejs
+++ b/views/account/manage.ejs
@@ -16,9 +16,12 @@
 
 <h2>Welcome, <%= locals.accountData.account_firstname %>.</h2>
 
-<p id="accountUpdateLink"><a href="/account/update/<%= locals.accountData.account_id %>">Update your account information</a></p>
+<p id="accountUpdateLink"><a href="/account/update/<%= locals.accountData.account_id %>">
+    Update your <% if (locals.emplAuth) { %>personal <% } %>account information</a></p>
 
 <% if (locals.emplAuth) { %>
+    <p id="clientManageLink"><a href="/account/list">
+        Manage Client <% if (locals.adminAuth) { %>and Employee <% } %>Accounts</a></p>
     <h3>Inventory Management</h3>
     <p id="invManageLink"><a href="/inv/manage">Manage Company Inventory</a></p>
 <% } %>
